<?xml version="1.0"?>
<package format="2">
    <name>jarvis_ros2</name>
    <version>0.0.0</version>
    <description>Package containing examples of how to use the rcl API.</description>
    <maintainer email="huchunxu@hust.edu.cn">Hu Chunxu</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <build_depend>rcl</build_depend>
    <build_depend>jarvis</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>

    <exec_depend>example_interfaces</exec_depend>
    <exec_depend>rcl</exec_depend>
    <exec_depend>rmw_implementation</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>jarvis</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>